--- a/app/elements/searchreceipt-card/searchreceipt-card.html
+++ b/app/elements/searchreceipt-card/searchreceipt-card.html
@@ -10,8 +10,16 @@
        <div class="row">
         <div class="well well-sm">
           <div class="row">
-            <div class="col-md-12">              
-                <div class="col-md-4" style="margin-top: -2%;">
+            <div class="col-md-12">
+                <div class="col-md-3" style="margin-top: -1%;">
+                   <paper-input  label="Student Name" is="" value="{{value}}" on-keydown="FnSearchEnquiry"></paper-input>
+                   <paper-listbox class="dropdown-content" id="input2" on-iron-select="FnSelectEnquiry">
+                   <template is="dom-repeat" items="{{itemArray}}" as="item">
+                   <paper-item value="{{item.admission_no}}">{{item.itemdes}}</paper-item>
+                   </template>
+                   </paper-listbox>
+                </div>              
+                <!-- <div class="col-md-4" style="margin-top: -2%;">
                   <paper-input id="searchtext" label="Admission Number/Name" value="{{enquiryno}}">
                   <paper-icon-button suffix icon="search" on-click="FnSearchEnquiry" title="Search"></paper-icon-button>
                   </paper-input>
@@ -24,7 +32,7 @@
                     </template>
                    </paper-listbox>
                   </paper-dropdown-menu>
-                </div>
+                </div> -->
                 <div class="col-md-3" style="margin-top: -1%;">
                  <paper-dropdown-menu id="receiptacademicyear" label="Academic Year" on-iron-select="FnSelectAcademicYear">
                   <paper-listbox class="dropdown-content" selected="{{selectedacademicyear}}" id="receiptacademicyear" attr-for-selected="value">
@@ -50,23 +58,106 @@
   (function() {
     'use strict';
     var academicyear="";
+    var item=[];
     Polymer({
       is: 'searchreceipt-card',
       ready:function(){
-
       },
-      FnSearchEnquiry:function(){
-        this.$.admissionservice.callSearchenquiryService(this.enquiryno);
+      callService:function(){
+        this.$.admissionservice.fetchallstudentforsearchService();
       },
-      FnSelectEnquiry:function(e){
-        var enquiry=(e.target.selectedItem.textContent).trim();
-        var inx=enquiry.indexOf('-');
-        var enquiry_no=enquiry.substring(0,inx);
-        var enquiry_name=enquiry.substring(inx+1);
-        localStorage.setItem("curr_sess_enquiryno",enquiry_no);
-        localStorage.setItem("curr_sess_enquiryname",enquiry_name);
-        // this.$.admissionservice.callFetchenquiryinfoService();
+      autocompletearr:function(autocompletearr)
+      {
+         item=autocompletearr;
       },
+      FnSearchEnquiry:function(e){
+      if(e.keyCode==13|| e.keyCode==40)
+      this.querySelector('paper-listbox').focus();
+      var arr=[];
+      arr.push({"itemdes":"-----Select-----"});
+      this.querySelector('paper-listbox').style.visibility='visible';
+      if(e.keyCode==8){
+        this.itemflag="true";
+        this.itemval="";
+        //alert('yes');
+        var len=(this.value).length;
+        if(len<=1){
+          this.querySelector('paper-listbox').style.visibility='hidden';
+          this.itemArray="";
+          this.itemval="";
+        }
+        if(len>1){
+          this.querySelector('paper-listbox').style.visibility='visible';
+          var backsubval=(((this.value).substring(0,(len-1))).trim()).toUpperCase();
+          for(var i=0;i<item.length;i++)
+          {
+            var subval=((item[i].student_name).trim()).substring(0,backsubval.length);
+            if((item[i].student_name).toUpperCase().indexOf((this.value).toUpperCase())!=-1)
+            {
+              var obj={"itemdes":"","enquiry_no":""};
+              obj.itemdes=item[i].student_name;
+              obj.admission_no=item[i].admission_no;
+              arr.push(obj);
+            }
+          }
+          this.itemArray=arr;
+        }
+      }
+      if(e.keyCode!=8&& e.keyCode!=16&& e.keyCode!=13 && e.keyCode!=38&&e.keyCode!=40&&e.keyCode!=37&&e.keyCode!=39){
+        if(this.itemflag=="true") {
+          this.itemval = (this.value).toUpperCase()+String.fromCharCode((e.keyCode)).toUpperCase();
+          this.itemflag="false";
+        }
+        else
+        this.itemval = this.value +String.fromCharCode((e.keyCode));
+        if(this.itemval.length>0)
+        {
+          for(var i=0;i<item.length;i++)
+          {
+            var subval=((item[i].student_name).trim()).substring(0,this.itemval.length);
+            if((item[i].student_name).toUpperCase().indexOf((this.itemval).toUpperCase())!=-1)
+            {
+              var obj={"itemdes":"","enquiry_no":""};
+              obj.itemdes=item[i].student_name;
+              obj.admission_no=item[i].admission_no;
+              arr.push(obj);
+            }
+          }
+          if(arr.length>0)
+            this.itemArray=arr;
+          else
+          {
+            var obj={"itemdes":"","enquiry_no":""};
+            obj.itemdes="No items found";
+            arr.push(obj);
+            this.itemArray=arr;
+          }
+        }
+      }
+    },
+    FnSelectEnquiry:function(e){
+    this.querySelector('paper-listbox').style.visibility='hidden';
+    var enquiry_name = e.target.selectedItem.textContent.trim();
+    var admission_no = e.target.selectedItem.value.trim();
+    localStorage.setItem("curr_sess_enquiryno",admission_no);
+    localStorage.setItem("curr_sess_enquiryname",enquiry_name);
+    this.itemArray=[];
+    document.querySelector('#input2').selected=-1;
+    this.value=enquiry_name;
+    this.$.processingservice.fetchchequeforeditordelete(admission_no);
+    },
+      // FnSearchEnquiry:function(){
+      //   this.$.admissionservice.callSearchenquiryService(this.enquiryno);
+      // },
+      // FnSelectEnquiry:function(e){
+      //   var enquiry=(e.target.selectedItem.textContent).trim();
+      //   var inx=enquiry.indexOf('-');
+      //   var enquiry_no=enquiry.substring(0,inx);
+      //   var enquiry_name=enquiry.substring(inx+1);
+      //   localStorage.setItem("curr_sess_enquiryno",enquiry_no);
+      //   localStorage.setItem("curr_sess_enquiryname",enquiry_name);
+      //   // this.$.admissionservice.callFetchenquiryinfoService();
+      // },
       FnSelectAcademicYear:function(e){
         academicyear=(e.target.selectedItem.textContent).trim();
         localStorage.setItem("curr_sess_academicyear",academicyear);
