--- a/app/elements/admission-service/admission-service.html
+++ b/app/elements/admission-service/admission-service.html
@@ -2004,6 +2004,7 @@ insertstudenthistoryResponse:function(e){
       fetchallstudentforsearchResponse:function(e){
         document.querySelector('chequebounceorcancel-card').autocompletearr(e.detail.response.returnval);
         document.querySelector('editdelete-cheques-card').autocompletearr(e.detail.response.returnval);
+        document.querySelector('searchreceipt-card').autocompletearr(e.detail.response.returnval);
       }   
 
     });
