--- a/app/elements/searchreceipt-card/searchreceipt-card.html
+++ b/app/elements/searchreceipt-card/searchreceipt-card.html
@@ -13,7 +13,7 @@
             <div class="col-md-12">
                 <div class="col-md-3" style="margin-top: -1%;">
                    <paper-input  label="Student Name" is="" value="{{value}}" on-keydown="FnSearchEnquiry"></paper-input>
-                   <paper-listbox class="dropdown-content" id="input2" on-iron-select="FnSelectEnquiry">
+                   <paper-listbox class="dropdown-content" id="searchreceiptinput2" on-iron-select="FnSelectEnquiry">
                    <template is="dom-repeat" items="{{itemArray}}" as="item">
                    <paper-item value="{{item.admission_no}}">{{item.itemdes}}</paper-item>
                    </template>
@@ -34,8 +34,8 @@
                   </paper-dropdown-menu>
                 </div> -->
                 <div class="col-md-3" style="margin-top: -1%;">
-                 <paper-dropdown-menu id="receiptacademicyear" label="Academic Year" on-iron-select="FnSelectAcademicYear">
-                  <paper-listbox class="dropdown-content" selected="{{selectedacademicyear}}" id="receiptacademicyear" attr-for-selected="value">
+                 <paper-dropdown-menu id="searchreceiptacademicyear" label="Academic Year" on-iron-select="FnSelectAcademicYear">
+                  <paper-listbox class="dropdown-content" selected="{{selectedacademicyear}}" id="searchreceiptacademicyear" attr-for-selected="value">
                   <template  is="dom-repeat" items="{{academicarr}}" as="item">
                   <paper-item value="{{item.academic_year}}">{{item.academic_year}}</paper-item>
                   </template>
@@ -62,6 +62,7 @@
     Polymer({
       is: 'searchreceipt-card',
       ready:function(){
+      this.querySelector('#searchreceiptinput2').style.visibility='hidden';
       },
       callService:function(){
         this.$.admissionservice.fetchallstudentforsearchService();
@@ -72,25 +73,26 @@
       },
       FnSearchEnquiry:function(e){
       if(e.keyCode==13|| e.keyCode==40)
-      this.querySelector('paper-listbox').focus();
+      this.querySelector('#searchreceiptinput2').focus();
       var arr=[];
       arr.push({"itemdes":"-----Select-----"});
-      this.querySelector('paper-listbox').style.visibility='visible';
+      this.querySelector('#searchreceiptinput2').style.visibility='visible';
       if(e.keyCode==8){
         this.itemflag="true";
         this.itemval="";
         //alert('yes');
         var len=(this.value).length;
         if(len<=1){
-          this.querySelector('paper-listbox').style.visibility='hidden';
+          this.querySelector('#searchreceiptinput2').style.visibility='hidden';
           this.itemArray="";
           this.itemval="";
         }
         if(len>1){
-          this.querySelector('paper-listbox').style.visibility='visible';
+          this.querySelector('#searchreceiptinput2').style.visibility='visible';
           var backsubval=(((this.value).substring(0,(len-1))).trim()).toUpperCase();
           for(var i=0;i<item.length;i++)
           {
+            // alert(item[i].student_name);
             var subval=((item[i].student_name).trim()).substring(0,backsubval.length);
             if((item[i].student_name).toUpperCase().indexOf((this.value).toUpperCase())!=-1)
             {
@@ -136,15 +138,16 @@
       }
     },
     FnSelectEnquiry:function(e){
-    this.querySelector('paper-listbox').style.visibility='hidden';
+    this.querySelector('#searchreceiptinput2').style.visibility='hidden';
     var enquiry_name = e.target.selectedItem.textContent.trim();
     var admission_no = e.target.selectedItem.value.trim();
     localStorage.setItem("curr_sess_enquiryno",admission_no);
     localStorage.setItem("curr_sess_enquiryname",enquiry_name);
     this.itemArray=[];
-    document.querySelector('#input2').selected=-1;
+    document.querySelector('#searchreceiptinput2').selected=-1;
     this.value=enquiry_name;
-    this.$.processingservice.fetchchequeforeditordelete(admission_no);
+    // this.$.processingservice.fetchreceiptService(localStorage.getItem("curr_sess_enquiryno"),localStorage.getItem("curr_sess_enquiryname"));
+    // this.$.processingservice.fetchchequeforeditordelete(admission_no);
     },
       // FnSearchEnquiry:function(){
       //   this.$.admissionservice.callSearchenquiryService(this.enquiryno);
@@ -164,6 +167,12 @@
       },
       FnView:function(){
         this.$.processingservice.fetchreceiptService(localStorage.getItem("curr_sess_enquiryno"),localStorage.getItem("curr_sess_enquiryname"));
+      },
+      FnRefresh:function(){
+        this.querySelector('#searchreceiptinput2').style.visibility='hidden';
+        document.querySelector('#searchreceiptacademicyear').selected=-1;
+        this.itemArray=[];
+        this.value="";
       }
     });
   })();
