payment with discount and proper split

--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -231,6 +231,11 @@
               <daycollection-report></daycollection-report>
             </div>
           </section>
+          <section data-category="adddiscount">
+            <div class="col-md-12">
+              <attachdiscount-card></attachdiscount-card>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
