--- a/app/elements/appregfee-service/appregfee-service.html
+++ b/app/elements/appregfee-service/appregfee-service.html
@@ -516,6 +516,7 @@
         // alert(JSON.stringify(e.detail.response.returnval));
         document.querySelector('registerationfee-card').autocompletearr(e.detail.response.returnval);
         document.querySelector('fees-card').autocompletearr(e.detail.response.returnval);
+        document.querySelector('attachdiscount-card').autocompletearr(e.detail.response.returnval);
       }
     });
   })();
