--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -235,3 +235,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="rte-realisation-itemcard/rte-realisation-itemcard.html">
 <link rel="import" href="tp-realisation-itemcard/tp-realisation-itemcard.html">
 <link rel="import" href="daycollection-report/daycollection-report.html">
+<link rel="import" href="attachdiscount-card/attachdiscount-card.html">
+<link rel="import" href="attachdiscount-itemcard/attachdiscount-itemcard.html">
