--- a/app/elements/admission-service/admission-service.html
+++ b/app/elements/admission-service/admission-service.html
@@ -1908,7 +1908,7 @@ insertstudenthistoryResponse:function(e){
             }
         }
         else{
-        document.querySelector('fees-card').Fnhidecommitinstallment(false);
+        // document.querySelector('fees-card').Fnhidecommitinstallment(false);
         document.querySelector('fees-card').hiddentitleflag=true;
         for(var i=0;i<arr.length;i++){
             arr[i].hiddencommitinput=true;
